--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -68,29 +68,95 @@
 
         <div class="container">
 
-            <!-- Main hero unit for a primary marketing message or call to action -->
-            <div class="hero-unit">
-                <h1>Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-            </div>
+            <h1>Attributes</h1>
 
-            <!-- Example row of columns -->
             <div class="row">
                 <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <h2>Physical</h2>
+                    <form class="form-horizontal">
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatStrength">Strength</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatStrength" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatEndurance">Endurance</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatEndurance" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatAgility">Agility</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatAgility" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatSpeed">Speed</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatSpeed" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-               </div>
+                    <h2>Mental</h2>
+                    <form class="form-horizontal">
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatWillpower">Willpower</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatWillpower" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatInsight">Insight</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatInsight" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatReasoning">Reasoning</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatReasoning" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatPerception">Perception</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatPerception" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                    </form>
+                </div>
                 <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <h2>Social</h2>
+                    <form class="form-horizontal">
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatPresence">Presence</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatPresence" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatComposure">Composure</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatComposure" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatManipulation">Manipulation</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatManipulation" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="inputStatBeauty">Beauty</label>
+                            <div class="controls">
+                                <input type="number" id="inputStatBeauty" placeholder="0-9" class="input-small">
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
