--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -172,6 +172,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/knockout-2.2.1.js"></script>
 
         <script src="js/main.js"></script>
     </body>
