--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -70,7 +70,7 @@
 
             <h1>Attributes</h1>
 
-            <div class="row">
+            <div class="row char-attributes">
                 <div class="span4">
                     <h2>Physical</h2>
                     <form class="form-horizontal">
