Display stat bonus for Strength.

--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -78,6 +78,7 @@
                             <label class="control-label" for="inputStatStrength">Strength</label>
                             <div class="controls">
                                 <input type="number" id="inputStatStrength" placeholder="0-9" class="input-small" data-bind="value: statStrength">
+                                <span class="attribute-bonus" data-bind="text: statBonusStrength"></span>
                             </div>
                         </div>
                         <div class="control-group">
