--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -73,7 +73,7 @@
             <div class="row char-attributes">
 
                 <!-- Template for character attribute input field -->
-                <script id="char-attribute-template" type="text/html">
+                <script id="attribute-template" type="text/html">
                     <div class="control-group">
                         <label class="control-label" for="inputStatName" data-bind="text: statName"></label>
                         <div class="controls">
