--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -85,10 +85,10 @@
                 <!-- Template for character attribute input field -->
                 <script id="attribute-template" type="text/html">
                     <div class="control-group">
-                        <label class="control-label" for="inputStatName" data-bind="text: statName"></label>
+                        <label class="control-label" for="inputStatName" data-bind="text: attribute.name"></label>
                         <div class="controls">
-                            <input type="number" min="0" max="9" step="1" id="inputStatName" placeholder="0-9" class="input-small" data-bind="value: statValue">
-                            <span class="attribute-bonus" data-bind="text: statBonus"></span>
+                            <input type="number" min="0" max="9" step="1" id="inputStatName" placeholder="0-9" class="input-small" data-bind="value: attribute.score">
+                            <span class="attribute-bonus" data-bind="text: attribute.score"></span>
                         </div>
                     </div>
                 </script>
