Use templates to display character attributes.

--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -93,94 +93,8 @@
                     </div>
                 </script>
 
-                <div class="span4">
-                    <h2>Physical</h2>
-                    <form class="form-horizontal">
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatStrength">Strength</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatStrength" placeholder="0-9" class="input-small" data-bind="value: statStrength">
-                                <span class="attribute-bonus" data-bind="text: statBonusStrength"></span>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatEndurance">Endurance</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatEndurance" placeholder="0-9" class="input-small" data-bind="value: statEndurance">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatAgility">Agility</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatAgility" placeholder="0-9" class="input-small" data-bind="value: statAgility">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatSpeed">Speed</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatSpeed" placeholder="0-9" class="input-small" data-bind="value: statSpeed">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="span4">
-                    <h2>Mental</h2>
-                    <form class="form-horizontal">
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatWillpower">Willpower</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatWillpower" placeholder="0-9" class="input-small" data-bind="value: statWillpower">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatInsight">Insight</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatInsight" placeholder="0-9" class="input-small" data-bind="value: statInsight">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatReasoning">Reasoning</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatReasoning" placeholder="0-9" class="input-small" data-bind="value: statReasoning">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatPerception">Perception</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatPerception" placeholder="0-9" class="input-small" data-bind="value: statPerception">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="span4">
-                    <h2>Social</h2>
-                    <form class="form-horizontal">
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatPresence">Presence</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatPresence" placeholder="0-9" class="input-small" data-bind="value: statPresence">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatComposure">Composure</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatComposure" placeholder="0-9" class="input-small" data-bind="value: statComposure">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatManipulation">Manipulation</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatManipulation" placeholder="0-9" class="input-small" data-bind="value: statManipulation">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label" for="inputStatBeauty">Beauty</label>
-                            <div class="controls">
-                                <input type="number" min="0" max="9" step="1" id="inputStatBeauty" placeholder="0-9" class="input-small" data-bind="value: statBeauty">
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                <div data-bind="template: { name: 'attribute-group-template', foreach: characterAttributes, as: 'group' }"></div>
+
             </div>
 
             <hr>
