Enable Knockout Mapping plugin.

--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -110,6 +110,7 @@
 
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/knockout-2.2.1.js"></script>
+        <script src="js/vendor/knockout.mapping-2.4.1.js"></script>
 
         <script src="js/main.js"></script>
     </body>
