Display the attribute bonus.

--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -88,7 +88,7 @@
                         <label class="control-label" for="inputStatName" data-bind="text: attribute.name"></label>
                         <div class="controls">
                             <input type="number" min="0" max="9" step="1" id="inputStatName" placeholder="0-9" class="input-small" data-bind="value: attribute.score">
-                            <span class="attribute-bonus" data-bind="text: attribute.score"></span>
+                            <span class="attribute-bonus" data-bind="text: attribute.bonus"></span>
                         </div>
                     </div>
                 </script>
