--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </script>
 
-                <div data-bind="template: { name: 'attribute-group-template', foreach: characterAttributes, as: 'group' }"></div>
+                <div data-bind="template: { name: 'attribute-group-template', foreach: attribute_groups, as: 'group' }"></div>
 
             </div>
 
