--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -122,7 +122,7 @@
                     <tr>
                         <td data-bind="text: skill.name"></td>
                         <td>
-                            <input type="number" min="0" max="20" step="1" placeholder="0-20" class="input-small" data-bind="value: skill.rank, attr: { 'id': 'inputSkill'+skill.name() }">
+                            <input type="number" min="0" max="20" step="1" placeholder="0-20" class="input-small" data-bind="value: skill.rank, attr: { 'id': 'inputSkill'+group.name()+skill.name() }">
                         </td>
                     </tr>
                 </script>
