--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -75,22 +75,31 @@
                 <!-- Template for character attribute groups -->
                 <script id="attribute-group-template" type="text/html">
                     <div class="span4">
-                        <form class="form-horizontal">
-                            <h2 data-bind="text: group.name"></h2>
-                            <div data-bind="template: { name: 'attribute-template', foreach: group.attributes, as: 'attribute' }"></div>
-                        </form>
+                        <h2 data-bind="text: group.name"></h2>
+                        <table class="table table-hover" data-bind="">
+                            <thead>
+                                <th>Name</th>
+                                <th>Score</th>
+                                <th>Bonus</th>
+                            </thead>
+                            <tbody>
+                                <!--ko template: { name: 'attribute-template', foreach: group.attributes, as: 'attribute' }--><!--/ko-->
+                            </tbody>
+                        </table>
                     </div>
                 </script>
 
                 <!-- Template for character attribute input field -->
                 <script id="attribute-template" type="text/html">
-                    <div class="control-group">
-                        <label class="control-label" for="inputStatName" data-bind="text: attribute.name"></label>
-                        <div class="controls">
+                    <tr>
+                        <td>
+                            <label class="control-label" for="inputStatName" data-bind="text: attribute.name"></label>
+                        </td>
+                        <td>
                             <input type="number" min="0" max="9" step="1" id="inputStatName" placeholder="0-9" class="input-small" data-bind="value: attribute.score">
-                            <span class="attribute-bonus" data-bind="text: attribute.bonus"></span>
-                        </div>
-                    </div>
+                        </td>
+                        <td data-bind="text: attribute.bonus"></td>
+                    </tr>
                 </script>
 
                 <div data-bind="template: { name: 'attribute-group-template', foreach: attribute_groups, as: 'group' }"></div>
