--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -138,7 +138,25 @@
             <div class="row dice-roller">
 
                 <div class="span12">
-                    <select data-bind="template: { name: 'select-skill-template', foreach: skill_groups, as: 'group' }"></select>
+                    <table class="table table-hover">
+                        <thead>
+                            <th>Skill</th>
+                            <th>Skill bonus</th>
+                            <th>Attribute</th>
+                            <th>Attr. bonus</th>
+                            <th>Total bonus</th>
+                        </thead>
+                        <tbody>
+                            <td>
+                                <select data-bind="template: { name: 'select-skill-template', foreach: skill_groups, as: 'group' }"></select>
+                            </td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tbody>
+                    </table>
+                        
                 </div>
 
                 <!-- Template for skill selection -->
