--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -96,7 +96,7 @@
                             <label class="control-label" data-bind="text: attribute.name, attr: { 'for': 'inputStat'+attribute.name() }"></label>
                         </td>
                         <td>
-                            <input type="number" min="0" max="9" step="1" placeholder="0-9" class="input-small" data-bind="value: attribute.score, attr: { 'id': 'inputStat'+attribute.name() }">
+                            <input type="number" min="0" max="9" step="1" placeholder="0-9" class="input-mini" data-bind="value: attribute.score, attr: { 'id': 'inputStat'+attribute.name() }">
                         </td>
                         <td data-bind="text: attribute.bonus"></td>
                     </tr>
@@ -134,7 +134,7 @@
                         <label data-bind="text: skill.name, attr: { 'for': 'inputSkill'+group.name()+skill.name() }"></label>
                     </td>
                     <td>
-                        <input type="number" min="0" max="20" step="1" placeholder="0-20" class="input-small" data-bind="value: skill.rank, attr: { 'id': 'inputSkill'+group.name()+skill.name() }">
+                        <input type="number" min="0" max="20" step="1" placeholder="0-20" class="input-mini" data-bind="value: skill.rank, attr: { 'id': 'inputSkill'+group.name()+skill.name() }">
                     </td>
                     <td data-bind="text: skill.cost"></td>
                 </tr>
