--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -157,7 +157,9 @@
                         </thead>
                         <tbody>
                             <td>
-                                <select data-bind="template: { name: 'select-skill-template', foreach: skill_groups, as: 'group' }"></select>
+                                <select data-bind="foreach: skills_flattened">
+                                    <option data-bind="text: $data"></option>
+                                </select>
                             </td>
                             <td></td>
                             <td></td>
@@ -165,18 +167,7 @@
                             <td></td>
                         </tbody>
                     </table>
-                        
                 </div>
-
-                <!-- Template for skill selection -->
-                <script id="select-skill-template" type="text/html">
-                    <!--ko template: { name: 'select-skill-listitem-template', foreach: group.skills, as: 'skill' }--><!--/ko-->
-                </script>
-
-                <!-- Template for skill selection list items -->
-                <script id="select-skill-listitem-template" type="text/html">
-                    <option data-bind="text: group.name()+': '+skill.name()"></option>
-                </script>
 
             </div>
 
