--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -158,7 +158,7 @@
                         <tbody>
                             <td>
                                 <select data-bind="foreach: skills_flattened">
-                                    <option data-bind="text: $data"></option>
+                                    <option data-bind="text: $data.name"></option>
                                 </select>
                             </td>
                             <td></td>
