Display the selected skill's bonus.

--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -159,7 +159,7 @@
                             <td>
                                 <select data-bind="options: skills_flattened, optionsText: 'name', optionsCaption: 'Choose&hellip;', value: selected_skill"></select>
                             </td>
-                            <td></td>
+                            <td data-bind="text: selected_skill() ? selected_skill().bonus : null"></td>
                             <td></td>
                             <td></td>
                             <td></td>
