Bind the select field to selected_attribute.

--- a/character_sheet/index.html
+++ b/character_sheet/index.html
@@ -161,7 +161,7 @@
                             </td>
                             <td data-bind="text: selected_skill() ? selected_skill().bonus : null"></td>
                             <td>
-                                <select data-bind="options: selected_skill() ? selected_skill().primary_attributes : null, optionsCaption: 'Choose&hellip;'"></select>
+                                <select data-bind="options: selected_skill() ? selected_skill().primary_attributes : null, optionsCaption: 'Choose&hellip;', value: selected_attribute"></select>
                             </td>
                             <td></td>
                             <td></td>
